--- a/src/main/resources/templates/appointments/index.html
+++ b/src/main/resources/templates/appointments/index.html
@@ -12,7 +12,15 @@
     <th:block th:each="appointment : ${appointments}">
         <li th:text="${appointment}"></li>
     </th:block>
+
 </ul>
+
+<ul>
+    <li><a href="/appointments/create">Create Appointment</a></li>
+</ul>
+
+
+
 
 </body>
 </html>
