--- a/src/main/resources/templates/appointments/clients.html
+++ b/src/main/resources/templates/appointments/clients.html
@@ -7,7 +7,7 @@
 <body>
 
 <h1>Clients</h1>
-
+<p th:unless="${clients} and ${clients.size()}"> No Clients, yet!</p>
 <ul>
     <th:block th:each="client : ${clients}">
         <li th:text="${client}"></li>
