--- a/src/main/resources/templates/appointments/index.html
+++ b/src/main/resources/templates/appointments/index.html
@@ -7,7 +7,7 @@
 <body>
 
 <h1>Appointments</h1>
-
+<p th:unless="${appointments} and ${appointments.size()}"> No Appointments!</p>
 <ul>
     <th:block th:each="appointment : ${appointments}">
         <li th:text="${appointment}"></li>
