--- a/src/main/resources/templates/appointments/trainers.html
+++ b/src/main/resources/templates/appointments/trainers.html
@@ -7,7 +7,7 @@
 <body>
 
 <h1>Trainers</h1>
-
+<p th:unless="${trainers} and ${trainers.size()}">No Fitness Trainers!</p>
 <ul>
     <th:block th:each="trainer : ${trainers}">
         <li th:text="${trainer}"></li>
