--- a/src/main/resources/templates/appointments/add-client.html
+++ b/src/main/resources/templates/appointments/add-client.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="https://www.thymeleaf.org/">
-<head>
-    <meta charset="UTF-8">
-    <title>Add Client</title>
-</head>
+<head th:replace = "fragments :: head"></head>
 <body>
 <form method="post" action ="/clients/add-client">
     <label for="firstName">First Name</label>
