--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,27 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
-<head>
-    <meta charset="UTF-8"/>
-    <title>Coding Events</title>
-</head>
+<head th:replace = "fragments :: head"></head>
 <body>
 
 <h1> Gym Manager </h1>
 
-<nav>
-    <ul>
-        <li><a href="/appointments">Appointments</a></li>
-    </ul>
-    <ul>
-        <li><a href="/clients">Clients</a></li>
-    </ul>
-    <ul>
-        <li><a href="/trainers">Trainers</a></li>
-    </ul>
-    <ul>
-        <li><a href="/workouts">Workouts</a></li>
-    </ul>
-</nav>
+<nav th:replace = "fragments :: navigation"></nav>
 
 </body>
 </html>
