--- a/src/main/resources/templates/appointments/viewAppointments.html
+++ b/src/main/resources/templates/appointments/viewAppointments.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="https://www.thymeleaf.org/">
 <head th:replace = "fragments :: head"></head>
-<body>
+<body class = "container">
 <ul>
   <th:block th:each="appointment : ${appointments}">
     <li th:text="${appointment}"></li>
