added model classes for appointments,trainers and clients

--- a/src/main/resources/templates/appointments/clients.html
+++ b/src/main/resources/templates/appointments/clients.html
@@ -12,7 +12,7 @@
     </tr>
     </thead>
     <tr th:each="client : ${clients}">
-        <td th:text="${clients}"></td>
+        <td th:text="${client.toString()}"></td>
     </tr>
 
 <ul>
