--- a/src/main/resources/templates/appointments/index.html
+++ b/src/main/resources/templates/appointments/index.html
@@ -12,7 +12,7 @@
     </tr>
     </thead>
     <tr th:each="appointment : ${appointments}">
-        <td th:text="${appointment}"></td>
+        <td th:text="${appointment.name}"></td>
     </tr>
 
 </table>
