--- a/src/main/resources/templates/appointments/trainers.html
+++ b/src/main/resources/templates/appointments/trainers.html
@@ -12,7 +12,7 @@
     </tr>
     </thead>
     <tr th:each="trainer : ${trainers}">
-        <td th:text="${trainer}"></td>
+        <td th:text="${trainer.toString()}"></td>
     </tr>
 
 <ul>
