--- a/src/main/resources/templates/appointments/add-client.html
+++ b/src/main/resources/templates/appointments/add-client.html
@@ -5,19 +5,19 @@
 <form method="post" action ="/clients/add-client">
     <div class ="form-group">
     <label for="firstName">First Name</label>
-    <input class="form-control" id = "firstName" type="text" name="firstName"  >
+    <input class="form-control" id = "firstName" type="text" name="fName"  >
     </div>
     <div class ="form-group">
     <label for="lastName">Last Name</label>
-    <input class="form-control" id = "lastName" type="text" name="lastName" >
+    <input class="form-control" id = "lastName" type="text" name="lName" >
     </div>
     <div class ="form-group">
     <label for="phone">Phone Number</label>
-    <input class="form-control" type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}">
+    <input class="form-control" type="number" id="phone" name="phone" >
     </div>
     <div class ="form-group">
     <label for="dateOfBirth">Date Of Birth</label>
-    <input class="form-control" type="date" id="dateOfBirth" name="dateOfBirth">
+    <input class="form-control" type="date" id="dateOfBirth" name="dob">
     </div>
     <div class ="form-group">
     <label for="note">Note</label>
