--- a/src/main/resources/templates/appointments/add-trainer.html
+++ b/src/main/resources/templates/appointments/add-trainer.html
@@ -5,15 +5,15 @@
 <form method="post" action ="/trainers/add-trainer">
     <div class ="form-group">
     <label for="firstName">First Name</label>
-    <input class="form-control" id = "firstName" type="text" name="firstName"  >
+    <input class="form-control" id = "firstName" type="text" name="fName"  >
     </div>
     <div class ="form-group">
     <label for="lastName">Last Name</label>
-    <input class="form-control" id = "lastName" type="text" name="lastName" >
+    <input class="form-control" id = "lastName" type="text" name="lName" >
     </div>
     <div class ="form-group">
-    <label for="phone">Phone Number(xxx-xxx-xxxx)</label>
-    <input class="form-control" type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}">
+    <label for="phone">Phone</label>
+    <input class="form-control" type="number" id="phone" name="phone" >
     </div>
     <div class ="form-group">
     <input class="btn btn-success" type="submit" value="Add Client">
