--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -18,16 +18,13 @@
 
 </head>
 
-<body>
+<body class="body">
+
 
    <nav class="navbar navbar-expand-lg navbar-light bg-light" th:fragment="navigation">
 
-<!--      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">-->
-<!--         <span class="navbar-toggler-icon"></span>-->
-<!--      </button>-->
-<!--      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">-->
          <div class="navbar-nav">
-            <a class="nav-item nav-link" href="/"> Gym Manager</a>
+            <a class="nav-item nav-link" href="/">Home</a>
             <a class="nav-item nav-link" href="/appointments">Appointments</a>
             <a class="nav-item nav-link" href="/clients">Clients</a>
             <a class="nav-item nav-link" href="/trainers">Trainers</a>
