--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -1,19 +1,26 @@
-body{
-font-size: 25px;
-color: purple;
+body {
+    margin: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: #C0C0C0;
 }
-.body-content {
-    margin-top: 72px;
+
+div {
+    width: 100vw;
+    height: 100vh;
 }
+
 h1 {
 centered;}
 
 td, th {
-    padding: 10px;
+    padding: 5px;
+
 }
 
 th {
     text-align: center;
+    vertical-align top;
 }
 
 td {
@@ -24,7 +31,7 @@ tr:nth-child(odd) {
     background-color: #e4e4e4;
 }
 
-.centeredTable {
+.center {
     margin-left: auto;
     margin-right: auto;
 }
