--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,15 +1,43 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org/">
 <head th:replace="fragments :: head"></head> <!--Replaces using th:replace="(file_name) :: (name in file)-->
-<body class="container">
 
-    <div class="text-center">
-        <img src="templates/liftoffProject/MMG border images/Main Logo.png" class="rounded" alt="Main Logo">
-    </div>
+<body class="body">
+<table>
+    <tr>
+        <div class="text-center">
+            <img th:src = "@{/images/MainLogo.png}" />
+        </div>
+    </tr>
+    <tr>
+        <th scope="col">
+            <div class="text-center" >
+                <img th:src = "@{/images/SidePanelLogo.png}" />
+            </div>
+        </th>
+        <th scope="col">
+            <h1 class="text-center" > Gym Manager View </h1>
+            <ul>
+                <nav th:replace="fragments :: navigation"></nav>
+            </ul>
+            <ul>
+                <table>
+            <tr>
+                <td><a href="/appointments"><img th:src = "@{/images/appointments.png}" /></a></td>
+                <td><a href="/clients"><img th:src = "@{/images/clients.png}" /></a></td>
+                <td><a href="/trainers"><img th:src = "@{/images/trainers.png}" /></a></td>
+                <td><a href="/workouts"><img th:src = "@{/images/workouts.png}" /></a></td>
+            </tr>
+                </table>
+                    </ul>
+        </th>
+        <th scope="col">
+            <div class="text-center" >
+                <img th:src = "@{/images/SidePanelLogo.png}" />
+            </div>
+        </th>
+    </tr>
 
-<h1> Gym Manager </h1>
-    <ul>
-    <nav th:replace="fragments :: navigation"></nav>
-    </ul>
+</table>
 </body>
 </html>
