--- a/src/main/resources/templates/liftoffProject/workouts.html
+++ b/src/main/resources/templates/liftoffProject/workouts.html
@@ -3,9 +3,30 @@
 <head th:replace="fragments :: head"></head> <!--Replaces using th:replace="(file_name) :: (name in file)-->
 <body class="container">
 
-<h1>Workouts</h1>
-<ul>
-    <nav th:replace="fragments :: navigation"></nav>
-</ul>
+<table class="table">
+    <tr>
+        <div class="text-center">
+            <img th:src = "@{/images/MainLogo.png}" />
+        </div></tr>
+    <tr>
+        <th scope="col">
+            <div class="rounded float-left" >
+                <img th:src = "@{/images/SidePanelLogo.png}" />
+            </div>
+        </th>
+        <th scope="col">
+            <h1 class="text-center"> Workouts </h1>
+            <ul>
+                <nav th:replace="fragments :: navigation"></nav>
+            </ul>
+        </th>
+        <th scope="col">
+            <div class="rounded float-right" >
+                <img th:src = "@{/images/SidePanelLogo.png}" />
+            </div>
+        </th>
+    </tr>
+
+</table>
 </body>
 </html>
