--- a/src/main/resources/templates/appointments/add-client.html
+++ b/src/main/resources/templates/appointments/add-client.html
@@ -12,13 +12,18 @@
     <input class="form-control" id = "lastName" type="text" name="lName" >
     </div>
     <div class ="form-group">
+        <label for="dateOfBirth">Date Of Birth</label>
+        <input class="form-control" type="date" id="dateOfBirth" name="dob">
+    </div>
+    <div class ="form-group">
     <label for="phone">Phone Number</label>
     <input class="form-control" type="number" id="phone" name="phone" >
     </div>
     <div class ="form-group">
-    <label for="dateOfBirth">Date Of Birth</label>
-    <input class="form-control" type="date" id="dateOfBirth" name="dob">
+        <label for="email">Email</label>
+        <input class="form-control" type="text" id="email" name="email">
     </div>
+
     <div class ="form-group">
     <label for="note">Note</label>
     <textarea class="form-control" id="note" name="note" rows="4" cols="50"></textarea>
