--- a/src/main/resources/templates/appointments/add-trainer.html
+++ b/src/main/resources/templates/appointments/add-trainer.html
@@ -16,7 +16,11 @@
     <input class="form-control" type="number" id="phone" name="phone" >
     </div>
     <div class ="form-group">
-    <input class="btn btn-success" type="submit" value="Add Client">
+        <label for="email">Email</label>
+        <input class="form-control" type="text" id="email" name="email" >
+    </div>
+    <div class ="form-group">
+    <input class="btn btn-success" type="submit" value="Add Trainer">
     </div>
 </form>
 </body>
