--- a/src/main/resources/templates/appointments/clients.html
+++ b/src/main/resources/templates/appointments/clients.html
@@ -8,12 +8,23 @@
 <table class ="table">
     <thead>
     <tr>
-        <th></th>
+        <th>ID</th>
+        <th>Name</th>
+        <th>DOB</th>
+        <th>Phone</th>
+        <th>Email</th>
+        <th>Note</th>
     </tr>
     </thead>
     <tr th:each="client : ${clients}">
-        <td th:text="${client.toString()}"></td>
+        <td th:text="${client.id}"  ></td>
+        <td th:text="${client.fName + ' ' + client.lName}"  ></td>
+        <td th:text="${client.dob}"></td>
+        <td th:text="${client.phone}"></td>
+        <td th:text="${client.email}"></td>
+        <td th:text="${client.note}"></td>
     </tr>
+</table>
 
 <ul>
     <li><a href="/clients/add-client">Add Client</a></li>
