--- a/src/main/resources/templates/appointments/add-trainer.html
+++ b/src/main/resources/templates/appointments/add-trainer.html
@@ -1,20 +1,27 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="https://www.thymeleaf.org/">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<head th:replace = "fragments :: head"></head>
+<body class = "container">
 <form method="post" action ="/trainers/add-trainer">
+    <div class ="form-group">
     <label for="firstName">First Name</label>
-    <input id = "firstName" type="text" name="firstName"  >
+    <input class="form-control" id = "firstName" type="text" name="fName"  >
+    </div>
+    <div class ="form-group">
     <label for="lastName">Last Name</label>
-    <input id = "lastName" type="text" name="lastName" >
-    <label for="phone">Phone Number(xxx-xxx-xxxx)</label>
-    <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}">
-
-
-    <input type="submit" value="Add Client">
+    <input class="form-control" id = "lastName" type="text" name="lName" >
+    </div>
+    <div class ="form-group">
+    <label for="phone">Phone</label>
+    <input class="form-control" type="number" id="phone" name="phone" >
+    </div>
+    <div class ="form-group">
+        <label for="email">Email</label>
+        <input class="form-control" type="text" id="email" name="email" >
+    </div>
+    <div class ="form-group">
+    <input class="btn btn-success" type="submit" value="Add Trainer">
+    </div>
 </form>
 </body>
 </html>
