--- a/src/main/resources/templates/appointments/viewAppointments.html
+++ b/src/main/resources/templates/appointments/viewAppointments.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="https://www.thymeleaf.org/">
-<head>
-    <meta charset="UTF-8">
-    <title>List of Appointments</title>
-</head>
-<body>
+<head th:replace = "fragments :: head"></head>
+<body class = "container">
 <ul>
   <th:block th:each="appointment : ${appointments}">
     <li th:text="${appointment}"></li>
