--- a/src/main/resources/templates/appointments/workouts.html
+++ b/src/main/resources/templates/appointments/workouts.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
-<head>
-    <meta charset="UTF-8"/>
-    <title>workouts</title>
-</head>
-<body>
+<head th:replace = "fragments :: head"></head>
+<body class = "container">
 
 <h1>Workouts</h1>
 <ul>
