added Delete to Clients and Trainers

--- a/src/main/resources/templates/appointments/clients.html
+++ b/src/main/resources/templates/appointments/clients.html
@@ -28,6 +28,7 @@
 
 <ul>
     <li><a href="/clients/add-client">Add Client</a></li>
+    <li><a href="/clients/delete-client">Delete Client</a></li>
 </ul>
 
 </body>
