--- a/src/main/resources/templates/appointments/trainers.html
+++ b/src/main/resources/templates/appointments/trainers.html
@@ -24,6 +24,7 @@
 
 <ul>
     <li><a href="/trainers/add-trainer">Add Trainer</a></li>
+    <li><a href="/trainers/delete-trainer">Delete Trainer</a></li>
 </ul>
 
 </body>
