addad model binding for classes Client and Trainer

--- a/src/main/resources/templates/appointments/trainers.html
+++ b/src/main/resources/templates/appointments/trainers.html
@@ -21,7 +21,7 @@
         <td th:text="${trainer.email}"></td>
 
     </tr>
-
+</table>
 <ul>
     <li><a href="/trainers/add-trainer">Add Trainer</a></li>
     <li><a href="/trainers/delete-trainer">Delete Trainer</a></li>
