Appointment class and controller updated

--- a/src/main/resources/templates/appointments/clients.html
+++ b/src/main/resources/templates/appointments/clients.html
@@ -30,6 +30,7 @@
     <li><a href="/clients/add-client">Add Client</a></li>
     <li><a href="/clients/delete-client">Delete Client</a></li>
 </ul>
+<nav th:replace = "fragments :: navigation"></nav>
 
 </body>
 </html>
