--- a/src/main/resources/templates/appointments/trainers.html
+++ b/src/main/resources/templates/appointments/trainers.html
@@ -26,6 +26,7 @@
     <li><a href="/trainers/add-trainer">Add Trainer</a></li>
     <li><a href="/trainers/delete-trainer">Delete Trainer</a></li>
 </ul>
+<nav th:replace = "fragments :: navigation"></nav>
 
 </body>
 </html>
