--- a/src/main/resources/templates/appointments/add-client.html
+++ b/src/main/resources/templates/appointments/add-client.html
@@ -5,32 +5,28 @@
 <form method="post" action ="/clients/add-client">
     <div class ="form-group">
     <label for="firstName">First Name</label>
-    <input th:field = "${client.fName}" class="form-control" id = "firstName"   >
-        <p class="error" th:errors="${client.fName}"></p>
+    <input class="form-control" id = "firstName" th:field="${client.fName}"   >
     </div>
     <div class ="form-group">
     <label for="lastName">Last Name</label>
-    <input class="form-control" id = "lastName" th:field = "${client.lName}" >
-        <p class="error" th:errors="${client.lName}"></p>
+    <input class="form-control" id = "lastName" th:field="${client.lName}" >
     </div>
     <div class ="form-group">
-        <label for="dateOfBirth">Date Of Birth</label>
-        <input class="form-control" type="date" id="dateOfBirth" name="dob">
+        <label for="dob">Date Of Birth</label>
+        <input class="form-control"  id="dob" th:field="${client.dob}">
     </div>
     <div class ="form-group">
     <label for="phone">Phone Number</label>
-    <input class="form-control"  id="phone" th:field = "${client.phone}" >
-        <p class="error" th:errors="${client.phone}"></p>
+    <input class="form-control"  id="phone" th:field="${client.phone}" >
     </div>
     <div class ="form-group">
         <label for="email">Email</label>
-        <input class="form-control"  id="email" th:field = "${client.email}">
-        <p class="error" th:errors="${client.email}"></p>
+        <input class="form-control"  id="email" th:field="${client.email}">
     </div>
 
     <div class ="form-group">
     <label for="note">Note</label>
-    <textarea class="form-control" id="note" th:field = "${client.note}" rows="4" cols="50"></textarea>
+    <textarea class="form-control" id="note" th:field="${client.note}" rows="4" cols="50"></textarea>
     </div>
     <div class ="form-group">
     <input class="btn btn-success" type="submit" value="Add Client">
