--- a/src/main/resources/templates/appointments/add-trainer.html
+++ b/src/main/resources/templates/appointments/add-trainer.html
@@ -5,24 +5,19 @@
 <form method="post" action ="/trainers/add-trainer">
     <div class ="form-group">
     <label for="firstName">First Name</label>
-    <input class="form-control" id = "firstName" th:field = "${trainer.fName}"  >
-        <p class="error" th:errors="${trainer.fName}"></p>
-
+    <input class="form-control" id = "firstName" th:field="${trainer.fName}"  >
     </div>
     <div class ="form-group">
     <label for="lastName">Last Name</label>
-    <input class="form-control" id = "lastName" th:field = "${trainer.lName}" >
-        <p class="error" th:errors="${trainer.lName}"></p>
+    <input class="form-control" id = "lastName" th:field="${trainer.lName}">
     </div>
     <div class ="form-group">
     <label for="phone">Phone</label>
-    <input class="form-control" th:field = "${trainer.phone}" id="phone"  >
-        <p class="error" th:errors="${trainer.phone}"></p>
+    <input class="form-control"  id="phone" th:field="${trainer.phone}" >
     </div>
     <div class ="form-group">
         <label for="email">Email</label>
-        <input class="form-control" th:field = "${trainer.email}" id="email"  >
-        <p class="error" th:errors="${trainer.email}"></p>
+        <input class="form-control"  id="email" th:field="${trainer.email}" >
     </div>
     <div class ="form-group">
     <input class="btn btn-success" type="submit" value="Add Trainer">
