Progress data models (#3)
* added Data layer to Client and Trainer

* added Delete to Clients and Trainers

* addad model binding for classes Client and Trainer

* added server side validation for Client and Trainer forms

* Appointment class and controller updated

--- a/src/main/resources/templates/appointments/clients.html
+++ b/src/main/resources/templates/appointments/clients.html
@@ -28,7 +28,9 @@
 
 <ul>
     <li><a href="/clients/add-client">Add Client</a></li>
+    <li><a href="/clients/delete-client">Delete Client</a></li>
 </ul>
+<nav th:replace = "fragments :: navigation"></nav>
 
 </body>
 </html>
