--- a/src/main/resources/templates/appointments/add-trainer.html
+++ b/src/main/resources/templates/appointments/add-trainer.html
@@ -5,19 +5,19 @@
 <form method="post" action ="/trainers/add-trainer">
     <div class ="form-group">
     <label for="firstName">First Name</label>
-    <input class="form-control" id = "firstName" type="text" name="fName"  >
+    <input class="form-control" id = "firstName" th:field="${trainer.fName}"  >
     </div>
     <div class ="form-group">
     <label for="lastName">Last Name</label>
-    <input class="form-control" id = "lastName" type="text" name="lName" >
+    <input class="form-control" id = "lastName" th:field="${trainer.lName}">
     </div>
     <div class ="form-group">
     <label for="phone">Phone</label>
-    <input class="form-control" type="number" id="phone" name="phone" >
+    <input class="form-control"  id="phone" th:field="${trainer.phone}" >
     </div>
     <div class ="form-group">
         <label for="email">Email</label>
-        <input class="form-control" type="text" id="email" name="email" >
+        <input class="form-control"  id="email" th:field="${trainer.email}" >
     </div>
     <div class ="form-group">
     <input class="btn btn-success" type="submit" value="Add Trainer">
