--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,7 +5,7 @@
 
 <h1> Gym Manager </h1>
 
-<nav th:replace = "fragments :: navigation"></nav>
+<nav th:replace = "fragments :: nav"></nav>
 
 </body>
 </html>
