--- a/src/main/resources/templates/appointments/add-client.html
+++ b/src/main/resources/templates/appointments/add-client.html
@@ -4,23 +4,23 @@
 <body class = "container">
 <form method="post" action ="/clients/add-client">
     <div class ="form-group">
-    <label for="firstName">First Name</label>
+    <label class="form-label" for="firstName">First Name</label>
     <input class="form-control" id = "firstName" th:field="${client.fName}"   >
     </div>
     <div class ="form-group">
-    <label for="lastName">Last Name</label>
+    <label class="form-label" for="lastName">Last Name</label>
     <input class="form-control" id = "lastName" th:field="${client.lName}" >
     </div>
     <div class ="form-group">
-        <label for="dob">Date Of Birth</label>
+        <label class="form-label" for="dob">Date Of Birth</label>
         <input class="form-control"  id="dob" th:field="${client.dob}">
     </div>
     <div class ="form-group">
-    <label for="phone">Phone Number</label>
+    <label class="form-label" for="phone">Phone Number</label>
     <input class="form-control"  id="phone" th:field="${client.phone}" >
     </div>
     <div class ="form-group">
-        <label for="email">Email</label>
+        <label class="form-label" for="email">Email</label>
         <input class="form-control"  id="email" th:field="${client.email}">
     </div>
 
