--- a/src/main/resources/templates/appointments/add-trainer.html
+++ b/src/main/resources/templates/appointments/add-trainer.html
@@ -4,19 +4,19 @@
 <body class = "container">
 <form method="post" action ="/trainers/add-trainer">
     <div class ="form-group">
-    <label for="firstName">First Name</label>
+    <label class="form-label" for="firstName">First Name</label>
     <input class="form-control" id = "firstName" th:field="${trainer.fName}"  >
     </div>
     <div class ="form-group">
-    <label for="lastName">Last Name</label>
+    <label class="form-label" for="lastName">Last Name</label>
     <input class="form-control" id = "lastName" th:field="${trainer.lName}">
     </div>
     <div class ="form-group">
-    <label for="phone">Phone</label>
+    <label class="form-label" for="phone">Phone</label>
     <input class="form-control"  id="phone" th:field="${trainer.phone}" >
     </div>
     <div class ="form-group">
-        <label for="email">Email</label>
+        <label class="form-label" for="email">Email</label>
         <input class="form-control"  id="email" th:field="${trainer.email}" >
     </div>
     <div class ="form-group">
