--- a/src/main/resources/templates/appointments/create.html
+++ b/src/main/resources/templates/appointments/create.html
@@ -5,16 +5,17 @@
 <form method="post" action ="/appointments/create">
 
     <div class ="form-group">
-    <label for="date">Date</label>
+    <label class="form-label" for="date">Date</label>
+
     <input class="form-control" type="date" id="date" name="date">
     </div>
     <div class ="form-group">
-    <label for="time">Time</label>
+    <label class="form-label" for="time">Time</label>
     <input class="form-control" type="time" id="time" name="time">
     </div>
-    <div class = "form-group">
+    <div >
         <lebel>Client
-            <select th:name = "client" >
+            <select th:name = "client"  class="form-select form-select-lg">
                 <option th:each = "client : ${clients}"
                         th:value = "${client.id}"
                         th:text = "${client.fName} + ' ' + ${client.lName} ">
@@ -25,7 +26,7 @@
 
     <div class = "form-group">
         <lebel>Trainer
-            <select th:name = "trainer">
+            <select th:name = "trainer" class="form-select form-select-lg">
                 <option th:each = "trainer : ${trainers}"
                         th:value = "${trainer.id}"
                         th:text = "${trainer.fName} + ' ' + ${trainer.lName}  ">
@@ -39,7 +40,7 @@
 
     <div class = "form-group">
         <lebel>Type
-            <select th:name = "type">
+            <select th:name = "type" class="form-select form-select-lg">
                 <option th:each = "type : ${types}"
                         th:value = "${type}"
                         th:text = "${type.displayName}">
@@ -47,9 +48,9 @@
             </select>
         </lebel>
     </div>
-    <div class = "form-group">
+    <div class = "form-group" >
         <lebel>Level
-            <select th:name="level">
+            <select th:name="level" class="form-select form-select-lg" >
                 <option th:each = " level : ${levels}"
                         th:value = "${level}"
                         th:text = "${level.displayName}">
