--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -1,26 +1,25 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="https://www.thymeleaf.org/">
 <head th:fragment ="head">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <meta charset="UTF-8">
+
+    <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <title>Gym Manager</title>
 </head>
 <body>
-<nav th:fragment = "navigation">
-
-    <ul class ="nav">
+<nav th:fragment = "nav" class="navbar navbar-expand-sm bg-light justify-content-center">
+    <div class="container-fluid">
+    <ul class="navbar-nav">
         <li class = "nav-item"><a href="/appointments">Appointments</a></li>
     </ul>
-    <ul class ="nav">
+    <ul class="navbar-nav">
         <li class="nav-item"><a href="/clients">Clients</a></li>
     </ul>
-    <ul class ="nav">
+    <ul class="navbar-nav">
         <li class="nav-item"><a href="/trainers">Trainers</a></li>
     </ul>
-    <ul class ="nav">
-        <li class="nav-item"><a href="/workouts">Workouts</a></li>
-    </ul>
+    </div>
 </nav>
 </body>
 </html>
