--- a/src/main/resources/templates/appointments/add-client.html
+++ b/src/main/resources/templates/appointments/add-client.html
@@ -4,12 +4,12 @@
 <body class = "container">
 <form method="post" action ="/clients/add-client">
     <div class ="form-group">
-    <label class="form-label" for="firstName">First Name</label>
-    <input class="form-control" id = "firstName" th:field="${client.fName}"   >
+    <label class="form-label" for="fName">First Name</label>
+    <input class="form-control" id = "fName" th:field="${client.fName}"   >
     </div>
     <div class ="form-group">
-    <label class="form-label" for="lastName">Last Name</label>
-    <input class="form-control" id = "lastName" th:field="${client.lName}" >
+    <label class="form-label" for="lName">Last Name</label>
+    <input class="form-control" id = "lName" th:field="${client.lName}" >
     </div>
     <div class ="form-group">
         <label class="form-label" for="dob">Date Of Birth</label>
@@ -19,13 +19,14 @@
     <label class="form-label" for="phone">Phone Number</label>
     <input class="form-control"  id="phone" th:field="${client.phone}" >
     </div>
+
     <div class ="form-group">
         <label class="form-label" for="email">Email</label>
         <input class="form-control"  id="email" th:field="${client.email}">
     </div>
 
     <div class ="form-group">
-    <label for="note">Note</label>
+    <label class="form-label"  for="note">Note</label>
     <textarea class="form-control" id="note" th:field="${client.note}" rows="4" cols="50"></textarea>
     </div>
     <div class ="form-group">
