--- a/src/main/resources/templates/appointments/trainers.html
+++ b/src/main/resources/templates/appointments/trainers.html
@@ -4,8 +4,9 @@
 <body class = "container">
 
 <h1>Trainers</h1>
-<p th:unless="${trainers} and ${trainers.size()}">No Fitness Trainers!</p>
-<table class ="table">
+<nav th:replace = "fragments :: navigation"></nav>
+
+<table class ="table table-striped">
     <thead>
     <tr>
         <th>ID</th>
@@ -22,11 +23,12 @@
 
     </tr>
 </table>
+<p th:unless="${trainers} and ${trainers.size()}">No Fitness Trainers!</p>
 <ul>
     <li><a href="/trainers/add-trainer">Add Trainer</a></li>
     <li><a href="/trainers/delete-trainer">Delete Trainer</a></li>
 </ul>
-<nav th:replace = "fragments :: navigation"></nav>
+
 
 </body>
 </html>
