--- a/src/main/resources/templates/appointments/clients.html
+++ b/src/main/resources/templates/appointments/clients.html
@@ -4,8 +4,9 @@
 <body class = "container">
 
 <h1>Clients</h1>
-<p th:unless="${clients} and ${clients.size()}">No Clients!</p>
-<table class ="table">
+<nav th:replace = "fragments :: navigation"></nav>
+
+<table class ="table table-striped">
     <thead>
     <tr>
         <th>ID</th>
@@ -25,12 +26,13 @@
         <td th:text="${client.note}"></td>
     </tr>
 </table>
+<p th:unless="${clients} and ${clients.size()}">No Clients!</p>
 
 <ul>
     <li><a href="/clients/add-client">Add Client</a></li>
     <li><a href="/clients/delete-client">Delete Client</a></li>
 </ul>
-<nav th:replace = "fragments :: navigation"></nav>
+
 
 </body>
 </html>
