--- a/src/main/resources/templates/appointments/clients.html
+++ b/src/main/resources/templates/appointments/clients.html
@@ -28,9 +28,9 @@
 </table>
 <p th:unless="${clients} and ${clients.size()}">No Clients!</p>
 
-<ul>
-    <li><a href="/clients/add-client">Add Client</a></li>
-    <li><a href="/clients/delete-client">Delete Client</a></li>
+<ul class="list-group">
+    <li class="list-group-item"><a href="/clients/add-client">Add Client</a></li>
+    <li class="list-group-item"><a href="/clients/delete-client">Delete Client</a></li>
 </ul>
 
 
