--- a/src/main/resources/templates/appointments/index.html
+++ b/src/main/resources/templates/appointments/index.html
@@ -31,9 +31,9 @@
 </table>
 <p th:unless="${appointments} and ${appointments.size()}">No Appointments!</p>
 
-<ul>
-    <li><a href="/appointments/create">Create Appointment</a></li>
-    <li><a href="/appointments/delete-appointment">Delete Appointment</a></li>
+<ul class="list-group">
+    <li class="list-group-item" ><a href="/appointments/create">Create Appointment</a></li>
+    <li class="list-group-item" ><a href="/appointments/delete-appointment">Delete Appointment</a></li>
 </ul>
 
 
