--- a/src/main/resources/templates/appointments/add-client.html
+++ b/src/main/resources/templates/appointments/add-client.html
@@ -2,6 +2,7 @@
 <html lang="en" xmlns:th="https://www.thymeleaf.org/">
 <head th:replace = "fragments :: head"></head>
 <body class = "container">
+<nav th:replace = "fragments :: navigation"></nav>
 <form method="post" action ="/clients/add-client">
     <div class ="form-group">
     <label for="firstName">First Name</label>
