--- a/src/main/resources/templates/appointments/trainers.html
+++ b/src/main/resources/templates/appointments/trainers.html
@@ -24,9 +24,9 @@
     </tr>
 </table>
 <p th:unless="${trainers} and ${trainers.size()}">No Fitness Trainers!</p>
-<ul>
-    <li><a href="/trainers/add-trainer">Add Trainer</a></li>
-    <li><a href="/trainers/delete-trainer">Delete Trainer</a></li>
+<ul class="list-group">
+    <li class="list-group-item"><a href="/trainers/add-trainer">Add Trainer</a></li>
+    <li class="list-group-item"><a href="/trainers/delete-trainer">Delete Trainer</a></li>
 </ul>
 
 
