--- a/src/main/resources/templates/appointments/add-client.html
+++ b/src/main/resources/templates/appointments/add-client.html
@@ -5,24 +5,29 @@
 <nav th:replace = "fragments :: navigation"></nav>
 <form method="post" action ="/clients/add-client">
     <div class ="form-group">
-    <label for="firstName">First Name</label>
-    <input class="form-control" id = "firstName" th:field="${client.fName}"   >
+    <label for="fName">First Name</label>
+    <input class="form-control" id = "fName" th:field="${client.fName}">
+        <p class ="error" style ="color:red;" th:errors ="${client.fName}" ></p>
     </div>
     <div class ="form-group">
     <label for="lastName">Last Name</label>
     <input class="form-control" id = "lastName" th:field="${client.lName}" >
+        <p class ="error" style ="color:red;" th:errors ="${client.lName}"></p>
     </div>
     <div class ="form-group">
         <label for="dob">Date Of Birth</label>
         <input class="form-control"  id="dob" th:field="${client.dob}">
+        <p class ="error" style ="color:red;" th:errors ="${client.dob}"></p>
     </div>
     <div class ="form-group">
     <label for="phone">Phone Number</label>
     <input class="form-control"  id="phone" th:field="${client.phone}" >
+        <p class ="error" style ="color:red;" th:errors ="${client.phone}"></p>
     </div>
     <div class ="form-group">
         <label for="email">Email</label>
         <input class="form-control"  id="email" th:field="${client.email}">
+        <p class ="error" style ="color:red;" th:errors ="${client.email}"></p>
     </div>
 
     <div class ="form-group">
