--- a/src/main/resources/templates/appointments/add-trainer.html
+++ b/src/main/resources/templates/appointments/add-trainer.html
@@ -7,18 +7,22 @@
     <div class ="form-group">
     <label for="firstName">First Name</label>
     <input class="form-control" id = "firstName" th:field="${trainer.fName}"  >
+        <p class ="error" style ="color:red;" th:errors ="${trainer.fName}"></p>
     </div>
     <div class ="form-group">
     <label for="lastName">Last Name</label>
     <input class="form-control" id = "lastName" th:field="${trainer.lName}">
+        <p class ="error" style ="color:red;" th:errors ="${trainer.lName}"></p>
     </div>
     <div class ="form-group">
     <label for="phone">Phone</label>
     <input class="form-control"  id="phone" th:field="${trainer.phone}" >
+        <p class ="error" style ="color:red;" th:errors ="${trainer.phone}"></p>
     </div>
     <div class ="form-group">
         <label for="email">Email</label>
         <input class="form-control"  id="email" th:field="${trainer.email}" >
+        <p class ="error" style ="color:red;" th:errors ="${trainer.email}"></p>
     </div>
     <div class ="form-group">
     <input class="btn btn-success" type="submit" value="Add Trainer">
