--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -31,7 +31,7 @@ tr:nth-child(odd) {
     background-color: #e4e4e4;
 }
 
-.center {
+table.center {
     margin-left: auto;
     margin-right: auto;
 }
