--- a/src/main/resources/templates/appointments/trainers.html
+++ b/src/main/resources/templates/appointments/trainers.html
@@ -3,8 +3,15 @@
 <head th:replace = "fragments :: head"></head>
 <body class = "container">
 
+<div th:replace="fragments :: topBanner"></div>
 <h1>Trainers</h1>
-<nav th:replace = "fragments :: navigation"></nav>
+<nav th:replace="fragments :: navigation"></nav>
+
+<div class="container-fluid">
+    <div class="row">
+        <div th:replace="fragments :: leftBanner"></div>
+
+        <div class="col">
 
 <table class ="table table-striped">
     <thead>
@@ -28,6 +35,12 @@
     <li class="list-group-item"><a href="/trainers/add-trainer">Add Trainer</a></li>
     <li class="list-group-item"><a href="/trainers/delete-trainer">Delete Trainer</a></li>
 </ul>
+        </div>
+
+        <div th:replace="fragments :: rightBanner"></div>
+
+    </div>
+</div>
 
 
 </body>
