--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -1,50 +1,41 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org/">
-<head th:fragment="head">
-   <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>MMG</title> <!--   homepage title-->
-
-<!--   THIS IS HOW YOU SOURCE OPEN SOURCE CODE FROM A DIFFERENT SERVER THATS ALREADY BEEN DEFINED (CSS AND BOOTSTRAP)-->
-<!--   VISIT THE SITE https://www.bootstrapcdn.com/ AND COPY PASTE THE LINKS, IGNORE THE BUNDLE LINK ATM-->
-      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js"></script>
-<!--   REMEBER TO IGNORE THE BUNDLE LINK ATM-->
-
-
-<!--   THIS HOW YOU LOCAL SOURCE STATIC TEMPLATES-->
-<!--    <script th:src="@{/script.js}"></script>-->
-<!--    <link th:href="@{/styles.css}" rel="stylesheet">-->
-
+<html lang="en" xmlns:th="https://www.thymeleaf.org/">
+<head th:fragment ="head">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
+    <title>Gym Manager</title>
 </head>
+<body>
 
-<body class="body">
+<div class="text-center" th:fragment = "topBanner">
+    <img th:src = "@{/images/MainLogo.png}" class="img-fluid" alt="Responsive image">
+</div>
 
+<div class="col" th:fragment = "leftBanner">
+    <img th:src = "@{/images/SidePanelLogo.png}" class="rounded float-left" />
+</div>
 
-   <nav class="navbar navbar-expand-lg navbar-light bg-light" th:fragment="navigation">
+<div class="col" th:fragment = "rightBanner" >
+    <img th:src = "@{/images/SidePanelLogo.png}" class="rounded float-end" />
+</div>
 
-         <div class="navbar-nav">
-            <a class="nav-item nav-link" href="/">Home</a>
-            <a class="nav-item nav-link" href="/appointments">Appointments</a>
-            <a class="nav-item nav-link" href="/clients">Clients</a>
-            <a class="nav-item nav-link" href="/trainers">Trainers</a>
-            <a class="nav-item nav-link" href="/workouts">Workouts</a>
-         </div>
-      </div>
-   </nav>
-<!--   <nav  class="navbar navbar-expand-lg navbar-light bg-light" th:fragment="navigation">-->
-<!--   <ul class="nav" >-->
-<!--      <li class="nav" ><a href="/appointments">Appointments</a></li>-->
-<!--   </ul>-->
-<!--   <ul class="nav">-->
-<!--      <li class="nav" ><a href="/clients">Clients</a></li>-->
-<!--   </ul>-->
-<!--   <ul class="nav">-->
-<!--      <li class="nav" ><a href="/trainers">Trainers</a></li>-->
-<!--   </ul>-->
-<!--   <ul class="nav">-->
-<!--      <li class="nav" ><a href="/workouts">Workouts</a></li>-->
-<!--   </ul>-->
-<!--</nav>-->
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark" th:fragment = "navigation">
+    <div class="container-fluid">
+        <ul class="navbar-nav">
+            <li class = "nav-item"><a class="nav-link active" href="/">Home</a></li>
+        </ul>
+    <ul class="navbar-nav">
+        <li class = "nav-item"><a class="nav-link active" href="/appointments">Appointments</a></li>
+    </ul>
+    <ul class="navbar-nav">
+        <li class="nav-item"><a class="nav-link active" href="/clients">Clients</a></li>
+    </ul>
+    <ul class="navbar-nav">
+        <li class="nav-item"><a class="nav-link active" href="/trainers">Trainers</a></li>
+    </ul>
+    </div>
+</nav>
+
 </body>
 </html>
