--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,41 +3,28 @@
 <head th:replace="fragments :: head"></head> <!--Replaces using th:replace="(file_name) :: (name in file)-->
 
 <body class="body">
-<table>
-    <tr>
-        <div class="text-center">
-            <img th:src = "@{/images/MainLogo.png}" />
-        </div>
-    </tr>
-    <tr>
-        <th scope="col">
-            <div class="text-center" >
-                <img th:src = "@{/images/SidePanelLogo.png}" />
-            </div>
-        </th>
-        <th scope="col">
-            <h1 class="text-center" > Gym Manager View </h1>
-            <ul>
-                <nav th:replace="fragments :: navigation"></nav>
-            </ul>
-            <ul>
-                <table>
-            <tr>
-                <td><a href="/appointments"><img th:src = "@{/images/appointments.png}" /></a></td>
-                <td><a href="/clients"><img th:src = "@{/images/clients.png}" /></a></td>
-                <td><a href="/trainers"><img th:src = "@{/images/trainers.png}" /></a></td>
-                <td><a href="/workouts"><img th:src = "@{/images/workouts.png}" /></a></td>
-            </tr>
-                </table>
-                    </ul>
-        </th>
-        <th scope="col">
-            <div class="text-center" >
-                <img th:src = "@{/images/SidePanelLogo.png}" />
-            </div>
-        </th>
-    </tr>
+<div th:replace="fragments :: topBanner"></div>
 
-</table>
+<nav th:replace="fragments :: navigation"></nav>
+
+<div class="container-fluid">
+    <div class="row">
+        <div th:replace="fragments :: leftBanner"></div>
+
+        <div class="col">
+            <table class="flex-fill">
+                <tr>
+                    <td><a href="/appointments"><img th:src="@{/images/appointments.png}"/></a></td>
+                    <td><a href="/clients"><img th:src="@{/images/clients.png}"/></a></td>
+                    <td><a href="/trainers"><img th:src="@{/images/trainers.png}"/></a></td>
+                </tr>
+            </table>
+        </div>
+
+        <div th:replace="fragments :: rightBanner"></div>
+
+    </div>
+</div>
+
 </body>
 </html>
